# prad2evviewer

./: .gitignore  CMakeLists.txt  README.md
analysis/: CMakeLists.txt  README.md  REPLAYED_DATA.md
analysis/cuts/: prad2_default.json
analysis/include/: ConfigSetup.h  MatchingTools.h  PhysicsTools.h  Replay.h
analysis/pyscripts/: _common.py  gem_eff_audit.py  gem_hycal_matching.py  plot_match_summary.py
analysis/scripts/: cosmic_eq_propose.py  gain_eq_analyze.py  gain_eq_patch_hv.py  gem_clusters_to_root.C  gem_hycal_matching.C  gem_raw_dump.C  lms_alpha_normalize.C  plot_hits_at_hycal.C  rootlogon.C  script_helpers.h  tagger_hycal_correlation.C
analysis/src/: MatchingTools.cpp  PhysicsTools.cpp  Replay.cpp
analysis/tools/: analysis_example.cpp  cosmic_lg.cpp  cosmic_test.cpp  det_calib.cpp  epCalib.cpp  epCalib_m.cpp  gain_fitter.cpp  gain_monitor.cpp  gain_replay.cpp  gama_calib.cpp  live_charge.cpp  matching.cpp  quick_check.cpp  replay_filter.cpp  replay_rawdata.cpp  replay_rawdata_m.cpp  replay_recon.cpp  replay_recon_m.cpp  replay_report_viewer.py  sim2replay.cpp
calibration/: README.md  gain_scanner.py  hycal_gain_equalizer.py  hycal_snake_scan.py  paths.json  scan_engine.py  scan_epics.py  scan_geoview.py  scan_gui_common.py  scan_utils.py
calibration/cosmic_gain/: README.md  new_vset.C  read_cosmic_json.C  vset_iter0.json
cmake/: PradHelpers.cmake  WebDeps.cmake  prad2_py_wrapper.sh.in
database/: config.json  daq_config.json  daq_map.json  gem_map.json  hist_config.json  hycal_modules.json  monitor_config.json  reconstruction_config.json  trigger_bits.json
database/daq_cnf/: adchycal_gain_v1.cnf  adchycal_gain_v2.cnf
database/gem_test/: gem_event_104.json  gem_event_107.json  gem_event_111.json  gem_event_113.json  gem_event_116.json  gem_event_120.json  gem_event_15.json  gem_event_162.json  gem_event_1718.json  gem_event_174.json  gem_event_181.json  gem_event_189.json  gem_event_19.json  gem_event_193.json  gem_event_2.json  gem_event_216.json  gem_event_22.json  gem_event_227.json  gem_event_23.json  gem_event_233.json  gem_event_235.json  gem_event_238.json  gem_event_2559.json  gem_event_2770.json  gem_event_291.json  gem_event_302.json  gem_event_305.json  gem_event_3070.json  gem_event_31.json  gem_event_315.json  gem_event_318.json  gem_event_326.json  gem_event_33.json  gem_event_356.json  gem_event_365.json  gem_event_378.json  gem_event_391.json  gem_event_408.json  gem_event_429.json  gem_event_444.json  (+20 more)
database/prad1/: adc1881m_pedestals.json  prad_calibration.json  prad_config.json  prad_daq_config.json  prad_hycal_daq_map.json  prad_monitor_config.json  prad_reconstruction_config.json
database/prad1/runinfo/: prad_general.json
database/runinfo/: 2p1_general.json
docs/: REPLAYED_DATA.md  SERVER_API.md  Tagger_translation_0.xlsx
docs/clas_fadc/: FADC250_algorithms.md  fadc250_modes.py
docs/prad2dec/: plot_wave_analysis.py  wave_analysis.md  wave_analysis.wiki
docs/rols/: banktags.md  fbrol1.c_fastbus_obsolete  hbtest1.c  rol1.c  rol1_sro.c  rol1dummy.c  rol1mvt.c  rol2.c  rol2_dcrbtest.c  rol2mvt.c  scaler1.c  srs1.c  tipci1.c  trig0.c  trig1.c  trig1_sro.c  vtp1.c  vtp1_sro_new.c  vtp1mpd.c
docs/technical_notes/: README.md
gem/: README.md  check_strip_map.py  gem_cluster_view.py  gem_dump.cpp  gem_event_viewer.py  gem_layout.py  gem_strip_map.py  gem_view.py
include/: EvChannel.h  EvStruct.h  Fadc250Data.h  Fadc250Decoder.h  WaveAnalyzer.h
prad2ana/: CMakeLists.txt
prad2ana/include/: EpicsStore.h  GemCluster.h  GemSystem.h  HyCalCluster.h  HyCalSystem.h
prad2ana/src/: EpicsStore.cpp  GemCluster.cpp  GemSystem.cpp  HyCalCluster.cpp  HyCalSystem.cpp
prad2dec/: CMakeLists.txt  README.md
prad2dec/include/: Adc1881mDecoder.h  DaqConfig.h  EpicsData.h  EpicsStore.h  EtChannel.h  EtConfigWrapper.h  EvChannel.h  Fadc250Data.h  Fadc250RawDecoder.h  InstallPaths.h  SspData.h  SspDecoder.h  WaveAnalyzer.h  load_daq_config.h
prad2dec/src/: Adc1881mDecoder.cpp  EpicsStore.cpp  EtChannel.cpp  EvChannel.cpp  Fadc250Decoder.cpp  Fadc250FwAnalyzer.cpp  Fadc250RawDecoder.cpp  InstallPaths.cpp  SspDecoder.cpp  WaveAnalyzer.cpp
prad2dec/test/: test_fadc_fw.cpp
prad2det/: CMakeLists.txt  README.md
prad2det/include/: EventData.h  EventData_io.h  GemCluster.h  GemPedestal.h  GemSystem.h  HyCalCluster.h  HyCalSystem.h  PipelineBuilder.h
prad2det/src/: GemCluster.cpp  GemPedestal.cpp  GemSystem.cpp  PipelineBuilder.cpp
prad2qtmon/: CMakeLists.txt  main.cpp
python/: bind_dec.cpp  bind_det.cpp  prad2py.cpp
resources/: cluster.js  config.js  cut_dialog.js  epics.js  gem.js  gem_apv.js  geo.js  lms.js  online.js  physics.js  report.js  viewer.css  viewer.html  viewer.js  waveform.js
scripts/: README.md  SNAKE_SCAN_MANUAL.md  check_strip_map.py  coincidence_monitor.py  ep_calib_viewer.py  gem_cluster_view.py  gem_hycal_match_viewer.py  gem_layout.py  gem_strip_map.py  hycal_event_viewer.py  hycal_gain_config.py  hycal_gain_monitor.py  hycal_geoview.py  hycal_map_builder.py  hycal_pedestal_monitor.py  hycal_scaler_map.py  hycal_snake_scan.py  json_flattener.py  prad2_server_tmux_template  run_gain_monitor.sh  setup.csh.in  setup.sh  tagger_viewer.py  tdc_viewer.py  trigger_mask_editor.py  waveform_hist_viewer.py  waveform_viewer.py
scripts/daq_tool/: fadc_gain_config.py  trigger_mask_editor.py
scripts/dev_tool/: convert_gem_map.py  extract_tagger_map.py  post_elog.py
scripts/shell/: prad2_setup.csh.in  prad2_setup.sh  run_gain_monitor.sh  start_prad2mon
src/: EvChannel.cpp  Fadc250Decoder.cpp  WaveAnalyzer.cpp  app_state.cpp  app_state.h  app_state_api.cpp  app_state_filter.cpp  app_state_init.cpp  data_source.h  evc_monitor.cpp  evc_viewer.cpp  evio_data_source.cpp  evio_data_source.h  prad2_server.cpp  root_data_source.cpp  viewer_server.cpp  viewer_server.h  viewer_server_et.cpp  viewer_server_http.cpp  viewer_utils.h
test/: CMakeLists.txt  README.md  et_feeder.cpp  evio_dump.cpp  gem_dump.cpp  ped_calc.cpp  test_main.cpp  ts_dump.cpp
test/dev/: dsc_scan.cpp  livetime.cpp
(+29 files in other folders)
