cmake_minimum_required(VERSION 3.14)
project(prad2evviewer VERSION 1.0.0 LANGUAGES CXX)

# ---------------------------------------------------------------------------
# Layout
#   cmake/           helper modules (PradHelpers, WebDeps)
#   prad2dec/        evio/ET decoder library
#   prad2det/        HyCal + GEM reconstruction
#   python/          prad2py pybind11 module          (BUILD_PYTHON)
#   analysis/        ROOT replay tools + data-source  (BUILD_ANALYSIS)
#   test/            command-line dump/diagnostic exes
#   src/             web server + Qt GUI applications (BUILD_GUI)
# ---------------------------------------------------------------------------

list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
include(PradHelpers)        # prad_option, prad_optional_probe, add_prad_tool

# ---------------------------------------------------------------------------
# Global compile settings
# ---------------------------------------------------------------------------
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# -fPIC for all static libs so they can be pulled into shared objects
# (ACLiC-compiled ROOT macros and the pybind11 module).
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
endif()

# ---------------------------------------------------------------------------
# Compile-time paths (auto-discovered, overridable)
# ---------------------------------------------------------------------------
if(NOT DEFINED DATABASE_DIR)
    set(DATABASE_DIR "${CMAKE_SOURCE_DIR}/database")
endif()
get_filename_component(DATABASE_DIR "${DATABASE_DIR}" ABSOLUTE)

if(NOT DEFINED RESOURCE_DIR)
    set(RESOURCE_DIR "${CMAKE_SOURCE_DIR}/resources")
endif()
get_filename_component(RESOURCE_DIR "${RESOURCE_DIR}" ABSOLUTE)

# ---------------------------------------------------------------------------
# Core libraries (always built)
# ---------------------------------------------------------------------------
add_subdirectory(prad2dec)                    # libprad2dec.a + WITH_ET option
add_subdirectory(prad2det)                    # libprad2det.a

# ---------------------------------------------------------------------------
# HTTP/WebSocket dependencies (json, websocketpp, asio — all header-only)
# ---------------------------------------------------------------------------
include(WebDeps)

# ---------------------------------------------------------------------------
# Diagnostic command-line tools (evio_dump, gem_dump, …)
# ---------------------------------------------------------------------------
add_subdirectory(test)

# ---------------------------------------------------------------------------
# Optional feature: ROOT-based analysis tools + viewer data source
# ---------------------------------------------------------------------------
prad_option(BUILD_ANALYSIS ON
    "Build analysis tools and ROOT data-source (requires ROOT)")

if(BUILD_ANALYSIS)
    find_package(ROOT 6.0 QUIET CONFIG COMPONENTS Core Tree RIO)
    prad_optional_probe(BUILD_ANALYSIS FOUND ROOT_FOUND
        HINT "Install ROOT 6.x (https://root.cern) and add its bin/ to PATH.")
endif()
if(BUILD_ANALYSIS)
    include(${ROOT_USE_FILE})
    message(STATUS "ROOT: using ${ROOT_VERSION}")
endif()
# prad2srv reads WITH_ROOT to switch root_data_source.cpp in/out.
set(WITH_ROOT ${BUILD_ANALYSIS})

# ---------------------------------------------------------------------------
# Server library (shared between prad2_server and prad2evviewer)
# ---------------------------------------------------------------------------
find_package(Threads REQUIRED)

set(SRV_SOURCES
    src/viewer_server.cpp src/viewer_server_http.cpp src/viewer_server_et.cpp
    src/app_state.cpp     src/app_state_init.cpp     src/app_state_api.cpp
    src/app_state_filter.cpp
    src/data_source.cpp   src/evio_data_source.cpp)
if(WITH_ROOT)
    list(APPEND SRV_SOURCES src/root_data_source.cpp)
endif()

add_library(prad2srv STATIC ${SRV_SOURCES})
target_include_directories(prad2srv PUBLIC ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(prad2srv PUBLIC
    prad2dec prad2det
    nlohmann_json::nlohmann_json websocketpp_lib Threads::Threads)
if(WITH_ET)
    target_compile_definitions(prad2srv PUBLIC WITH_ET)
endif()
if(WITH_ROOT)
    target_compile_definitions(prad2srv PUBLIC WITH_ROOT)
    target_link_libraries(prad2srv PUBLIC ROOT::Core ROOT::Tree ROOT::RIO)
endif()

# ---------------------------------------------------------------------------
# Unified HTTP server
# ---------------------------------------------------------------------------
add_executable(prad2_server src/prad2_server.cpp)
target_compile_definitions(prad2_server PRIVATE
    DATABASE_DIR="${DATABASE_DIR}" RESOURCE_DIR="${RESOURCE_DIR}")
target_link_libraries(prad2_server PRIVATE prad2srv)
set_target_properties(prad2_server PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# ---------------------------------------------------------------------------
# Analysis subdirectory (ROOT-dependent producers)
# ---------------------------------------------------------------------------
if(BUILD_ANALYSIS)
    add_subdirectory(analysis)
endif()

# ---------------------------------------------------------------------------
# Optional feature: Python bindings (prad2py)
# ---------------------------------------------------------------------------
prad_option(BUILD_PYTHON ON "Build Python bindings (prad2py)")

if(BUILD_PYTHON)
    find_package(Python 3.7 QUIET COMPONENTS Interpreter Development)
    set(_PY_OK FALSE)
    if(Python_FOUND AND Python_Development_FOUND)
        set(_PY_OK TRUE)
    endif()
    prad_optional_probe(BUILD_PYTHON FOUND _PY_OK HINT
        "RHEL/Rocky:  sudo dnf install python3-devel\n"
        "Debian/Ubuntu:  sudo apt install python3-dev\n"
        "Or point CMake at a specific interpreter with "
        "-DPython_EXECUTABLE=$(which python3).")
endif()
if(BUILD_PYTHON)
    message(STATUS "Python: ${Python_EXECUTABLE} "
                   "(headers: ${Python_INCLUDE_DIRS})")
    add_subdirectory(python)
endif()

# ---------------------------------------------------------------------------
# Optional feature: Qt GUI applications (prad2evviewer, prad2_client)
# ---------------------------------------------------------------------------
prad_option(BUILD_GUI ON "Build Qt GUI applications (prad2evviewer, prad2_client)")

if(BUILD_GUI)
    find_package(Qt6 QUIET COMPONENTS Widgets WebEngineWidgets)
    if(Qt6_FOUND)
        set(QT_VERSION_MAJOR 6)
    else()
        find_package(Qt5 QUIET COMPONENTS Widgets WebEngineWidgets)
        if(Qt5_FOUND)
            set(QT_VERSION_MAJOR 5)
        endif()
    endif()
    set(_QT_OK ${Qt6_FOUND})
    if(NOT _QT_OK)
        set(_QT_OK ${Qt5_FOUND})
    endif()
    prad_optional_probe(BUILD_GUI FOUND _QT_OK HINT
        "Install Qt6 Widgets + WebEngineWidgets (preferred) or Qt5.")
endif()
if(BUILD_GUI)
    message(STATUS "Qt: using Qt${QT_VERSION_MAJOR}")

    # Standalone viewer (embedded server + WebEngine).
    add_executable(prad2evviewer src/prad2evviewer.cpp)
    target_compile_definitions(prad2evviewer PRIVATE
        DATABASE_DIR="${DATABASE_DIR}" RESOURCE_DIR="${RESOURCE_DIR}")
    target_link_libraries(prad2evviewer PRIVATE
        prad2srv
        Qt${QT_VERSION_MAJOR}::Widgets
        Qt${QT_VERSION_MAJOR}::WebEngineWidgets)
    set_target_properties(prad2evviewer PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin AUTOMOC ON)

    # Thin remote client.
    add_executable(prad2_client src/prad2_client.cpp)
    target_link_libraries(prad2_client PRIVATE
        Qt${QT_VERSION_MAJOR}::Widgets
        Qt${QT_VERSION_MAJOR}::WebEngineWidgets)
    set_target_properties(prad2_client PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
endif()

# ---------------------------------------------------------------------------
# Install
# ---------------------------------------------------------------------------
include(GNUInstallDirs)

install(TARGETS prad2_server evio_dump ped_calc gem_dump
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
if(WITH_ET)
    install(TARGETS evc_test et_feeder evchan_test
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
endif()
if(BUILD_GUI)
    install(TARGETS prad2evviewer prad2_client
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
endif()

install(DIRECTORY database/  DESTINATION ${CMAKE_INSTALL_DATADIR}/prad2evviewer/database)
install(DIRECTORY resources/ DESTINATION ${CMAKE_INSTALL_DATADIR}/prad2evviewer/resources)
install(FILES scripts/setup.sh scripts/setup.csh
    DESTINATION ${CMAKE_INSTALL_BINDIR})

# ---------------------------------------------------------------------------
# Summary
# ---------------------------------------------------------------------------
message(STATUS "----------------------------------------------------")
message(STATUS "  ${PROJECT_NAME} ${PROJECT_VERSION}")
message(STATUS "  Build type   : ${CMAKE_BUILD_TYPE}")
message(STATUS "  Database     : ${DATABASE_DIR}")
message(STATUS "  Resources    : ${RESOURCE_DIR}")
message(STATUS "  ET support   : ${WITH_ET}")
message(STATUS "  Analysis+ROOT: ${BUILD_ANALYSIS}")
message(STATUS "  Python bind. : ${BUILD_PYTHON}")
message(STATUS "  Qt GUI       : ${BUILD_GUI}")
message(STATUS "----------------------------------------------------")
